--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username:  danmeal
 linkedin_username: danielbradygb
 
 # Build settings
-theme: minima
+theme: jekyll-theme-hydejack
 plugins:
   - jekyll-feed
 
