--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,13 @@ url: "https://danmeal.com" # the base hostname & protocol for your site, e.g. ht
 github_username:  danmeal
 linkedin_username: danielbradygb
 remote_theme: hydecorp/hydejack@v9
+author:
+  name: Daniel Brady
+  email: daniel.bradygb@gmail.com
+  social:
+    github: danmeal
+    
+
 
 # Build settings
 # theme: jekyll-theme-hydejack
