--- a/_config.yml
+++ b/_config.yml
@@ -24,21 +24,20 @@ description: >- # this means to ignore newlines until "baseurl:"
   Projects and other information
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://danmeal.com" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  danmeal
-linkedin_username: danielbradygb
 remote_theme: hydecorp/hydejack@v9
+
 author:
   name: Daniel Brady
-  email: daniel.bradygb@gmail.com
   social:
+    linkedin: https://www.linkedin.com/in/danielbradygb
+    email: daniel.bradygb@gmail.com
     github: danmeal
-    
-
 
 # Build settings
 # theme: jekyll-theme-hydejack
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
