--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,12 @@ description: >- # this means to ignore newlines until "baseurl:"
   Projects and other information
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://danmeal.com" # the base hostname & protocol for your site, e.g. http://example.com
-remote_theme: hydecorp/hydejack@v9
+remote_theme: hydecorp/hydejack@v9.1.6
 
 author:
   name: Daniel Brady
+  about: |
+    Test about
   social:
     linkedin: https://www.linkedin.com/in/danielbradygb
     email: daniel.bradygb@gmail.com
