--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,12 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://danmeal.com" # the base hostname & protocol for your site, e.g. http://example.com
 remote_theme: hydecorp/hydejack@v9.1.6
 
+accent_image: /assets/img/background-img.jpeg
+
 author:
   name: Daniel Brady
   about: |
-    Test about
+    Projects and other information
   social:
     linkedin: https://www.linkedin.com/in/danielbradygb
     email: daniel.bradygb@gmail.com
