--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Daniel Brady
 email: daniel.bradygb@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Portfilio
+  Portfolio
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://danmeal.com" # the base hostname & protocol for your site, e.g. http://example.com
 remote_theme: hydecorp/hydejack@v9.1.6
