--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://danmeal.com" # the base hostname & protocol for your site, e.g. http://example.com
 remote_theme: hydecorp/hydejack@v9.1.6
 
+hydejack:
+  cover: true
+
 accent_image: /assets/img/background-img.jpeg
 
 author:
